k8s-manifests/home/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-app
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: <YOUR_ECR>/home:latest
        ports:
        - containerPort: 5000
