k8s-manifests/home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-service
  namespace: home
spec:
  selector:
    app: home
  ports:
  - port: 80
    targetPort: 5000
